@@ -1827,6 +1827,63 @@ TGTSEE = What the target (if any) sees\n\r\
 NOTARGSEE = What the invoker sees when the target is not present\n\r\
 MSPFILE = name of msp sound file in your sounds directory 
 
+PROP_SOUNDER=\
+Property   : Prop_Sounder\n\r\
+Targets    : Areas, Room, Item, Mobs, Exits\n\r\
+Targets    : Room, MOBs, Items, Areas\n\r\
+Parameters :([EMOTE TRIGGER] [EMOTE STRING];) \n\r\
+Example    : enter wiggles his bottom.;sleep smiles evilly.;mount burps!\n\r\
+Example    : wear $p looks good on you.;remove Now you don't look so good.;remove_room $n doesn't look so good.\n\r\
+\n\r\
+A lightweight alternative to the Emoter and Sounder behaviors, this allows you to create very simple \
+emoting triggers based on event triggers instead of pro-active tick triggers, \
+such as getting an item, or leaving a room.  Each emote trigger is semicolon (;) \
+separated.  Valid emote triggers include the following:\n\r\
+GET - if an item is gotten (or THE item), this will emote to the getter.\n\r\
+GET_ROOM - if an item is gotten (or THE item), this will emote to the room (not the getter).\n\r\
+DROP - if an item is dropped (or THE item), this will emote to the getter.\n\r\
+DROP_ROOM - if an item is dropped (or THE item), this will emote to the room (not the getter).\n\r\
+PUSH - if an item is pushed (or THE item), this will emote to the pusher.\n\r\
+PUSH_ROOM - if an item is pushed (or THE item), this will emote to the room (not the pusher).\n\r\
+PULL - if an item is pulled (or THE item), this will emote to the pulled.\n\r\
+PULL_ROOM - if an item is pulled (or THE item), this will emote to the room (not the puller).\n\r\
+EAT - if an item is eaten (or THE item), this will emote to the eater.\n\r\
+EAT_ROOM - if an item is eaten (or THE item), this will emote to the room (not the getter).\n\r\
+MOUNT - if an item is mounted (or THE item), this will emote to the mounter.\n\r\
+MOUNT_ROOM - if an item is mounted (or THE item), this will emote to the room (not the getter).\n\r\
+DRINK - if an item is drunk (or THE item), this will emote to the drinker.\n\r\
+DRINK_ROOM - if an item is drunk (or THE item), this will emote to the room (not the getter).\n\r\
+SIT - if an item is sat on (or THE item), this will emote to the sitter.\n\r\
+SIT_ROOM - if an item is sat on (or THE item), this will emote to the room (not the getter).\n\r\
+SLEEP - if an item is slept on (or THE item), this will emote to the sleeper.\n\r\
+SLEEP_ROOM - if an item is slept on (or THE item), this will emote to the room (not the getter).\n\r\
+WEAR - if an item is worn (or THE item), this will emote to the wearer.\n\r\
+WEAR_ROOM - if an item is worn (or THE item), this will emote to the room (not the getter).\n\r\
+OPEN - if an item is opened (or THE item), this will emote to the wearer.\n\r\
+OPEN_ROOM - if an item is opened (or THE item), this will emote to the room (not the getter).\n\r\
+CLOSE - if an item is closed (or THE item), this will emote to the wearer.\n\r\
+CLOSE_ROOM - if an item is closed (or THE item), this will emote to the room (not the getter).\n\r\
+HOLD - if an item is held (or THE item), this will emote to the wearer.\n\r\
+HOLD_ROOM - if an item is held (or THE item), this will emote to the room (not the getter).\n\r\
+WIELD - if an item is wielded (or THE item), this will emote to the wearer.\n\r\
+WIELD_ROOM - if an item is wielded (or THE item), this will emote to the room (not the getter).\n\r\
+REMOVE - if an item is removed (or THE item), this will emote to the remover.\n\r\
+REMOVE_ROOM - if an item is removed (or THE item), this will emote to the room (not the getter).\n\r\
+PORTAL_ENTER - if the room is entered, this will emote to the one entering.\n\r\
+PORTAL_ENTER_ROOM - if the room is entered, this will emote to the others in the room.\n\r\
+PORTAL_EXIT - if the room is left, this will emote to the one leaving.\n\r\
+PORTAL_EXIT_ROOM - if the room is left, this will emote to the others in the room.\n\r\
+DAMAGE - if the object is hurt, or used to hurt, this will emote to the one hurting.\n\r\
+DAMAGE_ROOM - if the object is hurt, or used to hurt, this will emote to the others in the room.\n\r\
+FIGHT - if the object is attacking, or used to attack, this will emote to the one attacking.\n\r\
+FIGHT_ROOM - if the object is attacking, or used to attack, this will emote to the others in the room.\n\r\
+\n\r\
+The emote strings may be any text, and the following codes may be included:\n\r\
+$p - the name of the item with the behavior.\n\r\
+$n - the name of the source of the emote, or the source of the trigger.\n\r\
+$e - the he/she of $n.\n\r\
+$s - the his/her of $n.
+
 PROP_SPARRINGROOM=\
 Property   : Prop_SparringRoom\n\r\
 Targets    : Areas, Room\n\r\
